install p8105.datasets from github

--- a/p8105_hw3_yw3236.md
+++ b/p8105_hw3_yw3236.md
@@ -5,3 +5,10 @@ Yishan Wang
 
 Problem 1
 =========
+
+``` r
+devtools::install_github("p8105/p8105.datasets")
+```
+
+    ## Skipping install of 'p8105.datasets' from a github remote, the SHA1 (21f5ad1c) has not changed since last install.
+    ##   Use `force = TRUE` to force installation
