--- a/p8105_hw3_yw3236.Rmd
+++ b/p8105_hw3_yw3236.Rmd
@@ -10,3 +10,7 @@ date: 2018-10-07
 ```{r set up library, include = FALSE}
 library(tidyverse)
 ```
+
+```{r}
+devtools::install_github("p8105/p8105.datasets")
+```
