load the data from the p8105.datasets package

--- a/p8105_hw3_yw3236.Rmd
+++ b/p8105_hw3_yw3236.Rmd
@@ -14,3 +14,10 @@ library(tidyverse)
 ```{r}
 devtools::install_github("p8105/p8105.datasets")
 ```
+
+```{r}
+library(p8105.datasets)
+
+data(brfss_smart2010)
+```
+
