--- a/p8105_hw3_yw3236.md
+++ b/p8105_hw3_yw3236.md
@@ -12,3 +12,9 @@ devtools::install_github("p8105/p8105.datasets")
 
     ## Skipping install of 'p8105.datasets' from a github remote, the SHA1 (21f5ad1c) has not changed since last install.
     ##   Use `force = TRUE` to force installation
+
+``` r
+library(p8105.datasets)
+
+data(brfss_smart2010)
+```
