--- a/p8105_hw3_yw3236.md
+++ b/p8105_hw3_yw3236.md
@@ -18,3 +18,15 @@ library(p8105.datasets)
 
 data(brfss_smart2010)
 ```
+
+View(brfss\_smart2010)
+
+``` r
+formated_brfss_smart2010 = brfss_smart2010 %>%
+  janitor::clean_names() %>%
+  rename(., state = locationabbr, county = locationdesc) %>%
+  filter(., topic == "Overall Health") %>%
+  select(., -class, -topic, -question, -sample_size, -data_value, -(confidence_limit_low : geo_location))
+```
+
+View(formated\_brfss\_smart2010)
