--- a/p8105_hw3_yw3236.md
+++ b/p8105_hw3_yw3236.md
@@ -26,7 +26,37 @@ formated_brfss_smart2010 = brfss_smart2010 %>%
   janitor::clean_names() %>%
   rename(., state = locationabbr, county = locationdesc) %>%
   filter(., topic == "Overall Health") %>%
-  select(., -class, -topic, -question, -sample_size, -data_value, -(confidence_limit_low : geo_location))
+  select(., -class, -topic, -question, -sample_size, -data_value, -(confidence_limit_low:geo_location)) %>%
+  mutate(., response = as.factor(.$response)) %>%
+  arrange(., factor(response, levels = c("excellent", "very_good", "good", "fair", "ppor")))
+
+formated_brfss_smart2010
 ```
 
+    ## # A tibble: 10,625 x 4
+    ##     year state county                response 
+    ##    <int> <chr> <chr>                 <fct>    
+    ##  1  2010 AL    AL - Jefferson County Excellent
+    ##  2  2010 AL    AL - Jefferson County Very good
+    ##  3  2010 AL    AL - Jefferson County Good     
+    ##  4  2010 AL    AL - Jefferson County Fair     
+    ##  5  2010 AL    AL - Jefferson County Poor     
+    ##  6  2010 AL    AL - Mobile County    Excellent
+    ##  7  2010 AL    AL - Mobile County    Very good
+    ##  8  2010 AL    AL - Mobile County    Good     
+    ##  9  2010 AL    AL - Mobile County    Fair     
+    ## 10  2010 AL    AL - Mobile County    Poor     
+    ## # ... with 10,615 more rows
+
 View(formated\_brfss\_smart2010)
+
+``` r
+formated_brfss_smart2010_2002 = formated_brfss_smart2010 %>%
+  filter(., year == "2002") %>%
+  select(., -response) %>%
+  unique(.) %>%
+  group_by(state) %>%
+  summarize(n = n())
+```
+
+View(formated\_brfss\_smart2010\_2002)
