make a “spaghetti plot” that shows the number of observations in each state from 2002 to 2010

--- a/p8105_hw3_yw3236.Rmd
+++ b/p8105_hw3_yw3236.Rmd
@@ -46,3 +46,7 @@ formated_brfss_smart2010_2002 = formated_brfss_smart2010 %>%
 ```
 View(formated_brfss_smart2010_2002)
 
+```{r}
+Spaghetti.Plot = (formated_brfss_smart2010)
+```
+
