--- a/p8105_hw3_yw3236.md
+++ b/p8105_hw3_yw3236.md
@@ -60,3 +60,7 @@ formated_brfss_smart2010_2002 = formated_brfss_smart2010 %>%
 ```
 
 View(formated\_brfss\_smart2010\_2002)
+
+``` r
+Spaghetti.Plot = (formated_brfss_smart2010)
+```
