--- a/p8105_hw3_yw3236.md
+++ b/p8105_hw3_yw3236.md
@@ -67,38 +67,15 @@ formated_brfss_smart2010_2002 = formated_brfss_smart2010 %>%
 View(formated\_brfss\_smart2010\_2002)
 
 ``` r
-formated_brfss_smart2010_2002_to_2010 = formated_brfss_smart2010 %>%
-  select(., year, state, county) %>%
-  unique(.) %>%
+plot_2002_to_2010 = formated_brfss_smart2010 %>%
+  select(., year, state) %>%
   group_by(year, state) %>%
-  summarize(n_location = n())
+  summarize(n_location = n()) %>%
+  ggplot() +
+  geom_line(aes(x = year, y = n_location, color = state)) +
+  labs(x = "Year", y = "Number of Locations")
 
-formated_brfss_smart2010_2002_to_2010
-```
-
-    ## # A tibble: 443 x 3
-    ## # Groups:   year [?]
-    ##     year state n_location
-    ##    <int> <chr>      <int>
-    ##  1  2002 AK             1
-    ##  2  2002 AL             1
-    ##  3  2002 AR             1
-    ##  4  2002 AZ             2
-    ##  5  2002 CA             1
-    ##  6  2002 CO             4
-    ##  7  2002 CT             7
-    ##  8  2002 DC             1
-    ##  9  2002 DE             3
-    ## 10  2002 FL             7
-    ## # ... with 433 more rows
-
-``` r
-interaction.plot(formated_brfss_smart2010_2002_to_2010$year, 
-                 formated_brfss_smart2010_2002_to_2010$state, 
-                 formated_brfss_smart2010_2002_to_2010$n_location, 
-                 xlab = "Year", 
-                 ylab = "Number of Locations in Each State" , 
-                 legend = T)
+plot_2002_to_2010
 ```
 
 ![](p8105_hw3_yw3236_files/figure-markdown_github/unnamed-chunk-5-1.png) View(formated\_brfss\_smart2010\_2002\_to\_2010)
@@ -111,17 +88,17 @@ formated_brfss_smart2010_excellent_NY = formated_brfss_smart2010 %>%
   arrange(., year, county) %>%
   filter(., response == "Excellent") %>%
   group_by(year) %>%
-  summarise(mean_ny_excellent = mean(data_value), var_ny_excellent = var(data_value)) %>%
+  summarise(mean_ny_excellent = mean(data_value), std_ny_excellent = sqrt(var(data_value))) %>%
   knitr::kable(digits = 1) 
 
 formated_brfss_smart2010_excellent_NY
 ```
 
-|     year|     mean\_ny\_excellent|  var\_ny\_excellent|
+|     year|     mean\_ny\_excellent|  std\_ny\_excellent|
 |--------:|-----------------------:|-------------------:|
-|     2002|                    24.0|                20.1|
-|     2006|                    22.5|                16.0|
-|     2010|                    22.7|                12.7|
+|     2002|                    24.0|                 4.5|
+|     2006|                    22.5|                 4.0|
+|     2010|                    22.7|                 3.6|
 |  View(fo|  rmated\_brfss\_smart20|  10\_excellent\_NY)|
 
 ``` r
@@ -130,30 +107,9 @@ response_average_prop = formated_brfss_smart2010 %>%
   group_by(year, state, response) %>%
   summarise(average_prop = mean(data_value))
 
-response_average_prop[order(response_average_prop$response),]
-```
-
-    ## # A tibble: 2,215 x 4
-    ## # Groups:   year, state [443]
-    ##     year state response  average_prop
-    ##    <int> <chr> <fct>            <dbl>
-    ##  1  2002 AK    Excellent         27.9
-    ##  2  2002 AL    Excellent         18.5
-    ##  3  2002 AR    Excellent         24.1
-    ##  4  2002 AZ    Excellent         24.1
-    ##  5  2002 CA    Excellent         22.7
-    ##  6  2002 CO    Excellent         23.1
-    ##  7  2002 CT    Excellent         29.1
-    ##  8  2002 DC    Excellent         29.3
-    ##  9  2002 DE    Excellent         20.9
-    ## 10  2002 FL    Excellent         25.7
-    ## # ... with 2,205 more rows
-
-``` r
 ggplot(response_average_prop, aes(x = year, y = average_prop)) +
   geom_point() +
-  facet_grid(~response) +
-  viridis::scale_fill_viridis(discrete = TRUE)
+  facet_grid(~response)
 ```
 
     ## Warning: Removed 21 rows containing missing values (geom_point).
@@ -174,6 +130,12 @@ n_aisles = nrow(instacart %>%
   select(., aisle) %>%
   unique(.))
 
+n_aisles
+```
+
+    ## [1] 134
+
+``` r
 most_order_aisles = instacart %>%
   select(., aisle, product_id) %>%
   arrange(., aisle, product_id) %>%
@@ -181,7 +143,18 @@ most_order_aisles = instacart %>%
   summarise(item_num = n()) %>%
   arrange(., item_num) %>%
   tail(5)
+
+most_order_aisles
 ```
+
+    ## # A tibble: 5 x 2
+    ##   aisle                      item_num
+    ##   <chr>                         <int>
+    ## 1 packaged cheese               41699
+    ## 2 yogurt                        55240
+    ## 3 packaged vegetables fruits    78493
+    ## 4 fresh fruits                 150473
+    ## 5 fresh vegetables             150609
 
 View(most\_order\_aisles)
 
@@ -190,15 +163,14 @@ order_aisles = instacart %>%
   select(., aisle, product_id) %>%
   arrange(., aisle, product_id) %>%
   group_by(aisle) %>%
-  summarise(item_num = n())
+  summarise(item_num = n()) %>%
+  arrange(., desc(item_num)) %>%
+  ggplot() +  
+  geom_point(aes(x = reorder(aisle, -item_num), y = item_num, color = item_num)) +
+  theme(axis.text.x = element_text(angle = 90, hjust = 1, size = rel(1)))
 
-ggplot(order_aisles, aes(x = aisle, y = item_num)) +  
-  geom_point(alpha = .5) +
-  theme(legend.position = "bottom") +
-  ylim(0, 50000)
+order_aisles
 ```
-
-    ## Warning: Removed 4 rows containing missing values (geom_point).
 
 ![](p8105_hw3_yw3236_files/figure-markdown_github/unnamed-chunk-10-1.png) View(order\_aisles)
 
@@ -225,11 +197,148 @@ popular_pvf_item = popular_aisles %>%
   arrange(., item_num) %>%
   tail(1)
 
-table = tibble(
+tibble(
   ailse = c("baking ingredients", "dog food care", "packaged vegetables fruits"),
   popular_item = c(popular_bi_item$product_name, popular_dfc_item$product_name, popular_pvf_item$product_name)
 ) %>%
   knitr::kable(digits = 1) 
 ```
 
-View(popular\_aisles) View(table)
+| ailse                      | popular\_item                                 |
+|:---------------------------|:----------------------------------------------|
+| baking ingredients         | Light Brown Sugar                             |
+| dog food care              | Snack Sticks Chicken & Rice Recipe Dog Treats |
+| packaged vegetables fruits | Organic Baby Spinach                          |
+
+``` r
+mean_hour = instacart %>%
+  select(., product_name, order_hour_of_day, order_dow) %>%
+  filter(., product_name == "Pink Lady Apples" | product_name == "Coffee Ice Cream") %>%
+  group_by(order_dow, product_name) %>%
+  summarise(mean_hour_day = mean(order_hour_of_day)) %>%
+  rename(day = order_dow) 
+
+table_mean_hour = mean_hour %>%
+  mutate(mean_hour_day = round(mean_hour_day, 2)) %>%
+  mutate(mean_hour_day = format(mean_hour_day, nsmall = 2)) %>%
+  separate(mean_hour_day, into = c("hours", "mins"), sep = "\\.") %>%   
+  mutate(mins = round(as.numeric(mins)*0.6)) %>%  
+  mutate(average_time_order = paste(hours, "hours", mins, "mins")) %>% 
+  select(day, product_name, average_time_order) %>%   
+  spread(key = day, value = average_time_order) %>% 
+  knitr::kable(digits = 2, col.names = c("Product", "Sun", "Mon", "Tue", "Wed", "Thu", "Fri", "Sat"),
+               caption = "Mean Time of Day Most Listed Items Were Ordered")
+
+table_mean_hour
+```
+
+| Product          | Sun              | Mon              | Tue              | Wed              | Thu              | Fri              | Sat              |
+|:-----------------|:-----------------|:-----------------|:-----------------|:-----------------|:-----------------|:-----------------|:-----------------|
+| Coffee Ice Cream | 13 hours 46 mins | 14 hours 19 mins | 15 hours 23 mins | 15 hours 19 mins | 15 hours 13 mins | 12 hours 16 mins | 13 hours 50 mins |
+| Pink Lady Apples | 13 hours 26 mins | 11 hours 22 mins | 11 hours 42 mins | 14 hours 15 mins | 11 hours 33 mins | 12 hours 47 mins | 11 hours 56 mins |
+
+Problem 3
+=========
+
+``` r
+data(ny_noaa)
+```
+
+View(ny\_noaa)
+
+``` r
+formated_ny_noaa = ny_noaa %>% 
+  ungroup() %>%
+  mutate(year = format(date, "%Y"), month = format(date, "%m"), day = format(date, "%d")) %>%
+  mutate(prcp = prcp/10, tmax = as.numeric(tmax)/10, tmin = as.numeric(tmin)/10) %>%
+  select(., id, year, month, day, prcp, snow, snwd, tmax, tmin) 
+
+formated_ny_noaa
+```
+
+    ## # A tibble: 2,595,176 x 9
+    ##    id          year  month day    prcp  snow  snwd  tmax  tmin
+    ##    <chr>       <chr> <chr> <chr> <dbl> <int> <int> <dbl> <dbl>
+    ##  1 US1NYAB0001 2007  11    01       NA    NA    NA    NA    NA
+    ##  2 US1NYAB0001 2007  11    02       NA    NA    NA    NA    NA
+    ##  3 US1NYAB0001 2007  11    03       NA    NA    NA    NA    NA
+    ##  4 US1NYAB0001 2007  11    04       NA    NA    NA    NA    NA
+    ##  5 US1NYAB0001 2007  11    05       NA    NA    NA    NA    NA
+    ##  6 US1NYAB0001 2007  11    06       NA    NA    NA    NA    NA
+    ##  7 US1NYAB0001 2007  11    07       NA    NA    NA    NA    NA
+    ##  8 US1NYAB0001 2007  11    08       NA    NA    NA    NA    NA
+    ##  9 US1NYAB0001 2007  11    09       NA    NA    NA    NA    NA
+    ## 10 US1NYAB0001 2007  11    10       NA    NA    NA    NA    NA
+    ## # ... with 2,595,166 more rows
+
+``` r
+common_snwd = formated_ny_noaa %>%
+  select(., snwd) %>%
+  filter(., !is.na(snwd)) %>%
+  group_by(snwd) %>%
+  summarise(n = n()) %>%
+  arrange(., n) %>%
+  tail(1)
+
+common_snwd
+```
+
+    ## # A tibble: 1 x 2
+    ##    snwd       n
+    ##   <int>   <int>
+    ## 1     0 1621683
+
+View(formated\_ny\_noaa) View(common\_snwd)
+
+``` r
+jan_jul_temp = formated_ny_noaa %>%
+  select(., id, year, month, day, tmax) %>%
+  filter(., !is.na(tmax)) %>%
+  filter(., month == "01" | month == "07") %>%
+  group_by(year, month, id) %>%
+  summarise(average_max_temp = mean(tmax))
+
+ggplot(jan_jul_temp, aes(x = year, y = average_max_temp)) +
+  geom_point() +
+  facet_grid(~month)
+```
+
+![](p8105_hw3_yw3236_files/figure-markdown_github/unnamed-chunk-15-1.png)
+
+``` r
+ggplot(jan_jul_temp, aes(x = year, y = average_max_temp)) +
+  geom_boxplot() +
+  facet_grid(~month) 
+```
+
+![](p8105_hw3_yw3236_files/figure-markdown_github/unnamed-chunk-15-2.png) View(jan\_jul\_temp)
+
+``` r
+temp = formated_ny_noaa %>%
+  select(., id, year, month, day, tmax, tmin) %>%
+  filter(., !is.na(tmax) & !is.na(tmin)) 
+
+temp_plot = ggplot(temp, aes(x = tmin, y = tmax)) +     
+  geom_density_2d() +    
+  labs(x = "Min Temp (C)",
+       y = "Max Temp (C)")
+
+temp_plot
+```
+
+![](p8105_hw3_yw3236_files/figure-markdown_github/unnamed-chunk-16-1.png) View(temp)
+
+``` r
+snowfall = formated_ny_noaa %>%
+  select(., id, year, month, day, snow) %>%
+  filter(., snow > 0 & snow < 100) %>%
+  group_by(year)
+
+snow_plot = ggplot(snowfall) + 
+  geom_violin(aes(x = year, y = snow)) +
+  labs(x = "Year", y = "Snow (mm)")
+
+snow_plot
+```
+
+![](p8105_hw3_yw3236_files/figure-markdown_github/unnamed-chunk-17-1.png) View(snowfall)
